@@ -1,27 +1,28 @@
 package com.nusiss.neighbourlysg.service.impl;
 
+import com.nusiss.neighbourlysg.common.RoleConstants;
+import com.nusiss.neighbourlysg.config.ErrorMessagesConstants;
+import com.nusiss.neighbourlysg.dto.ProfileDto;
+import com.nusiss.neighbourlysg.dto.RoleAssignmentDto;
+import com.nusiss.neighbourlysg.entity.Profile;
+import com.nusiss.neighbourlysg.entity.Role;
+import com.nusiss.neighbourlysg.exception.*;
+import com.nusiss.neighbourlysg.mapper.ProfileMapper;
+import com.nusiss.neighbourlysg.repository.ProfileRepository;
+import com.nusiss.neighbourlysg.repository.RoleRepository;
+import com.nusiss.neighbourlysg.service.ProfileService;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
+
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
-
-import com.nusiss.neighbourlysg.dto.RoleAssignmentDto;
-import com.nusiss.neighbourlysg.entity.Role;
-import com.nusiss.neighbourlysg.exception.*;
-import com.nusiss.neighbourlysg.repository.RoleRepository;
-import org.apache.commons.lang3.StringUtils;
-import org.springframework.stereotype.Service;
-
-import com.nusiss.neighbourlysg.dto.LoginRequestDTO;
-import com.nusiss.neighbourlysg.dto.ProfileDto;
-import com.nusiss.neighbourlysg.entity.Profile;
-import com.nusiss.neighbourlysg.mapper.ProfileMapper;
-import com.nusiss.neighbourlysg.repository.ProfileRepository;
-import com.nusiss.neighbourlysg.service.ProfileService;
-import org.springframework.transaction.annotation.Transactional;
-
-import javax.management.relation.RoleNotFoundException;
 
 @Service
 public class ProfileServiceImpl implements ProfileService {
@@ -29,38 +30,68 @@ public class ProfileServiceImpl implements ProfileService {
     private final ProfileRepository profileRepository;
     private final ProfileMapper profileMapper;
     private final RoleRepository roleRepository;
+    private final PasswordEncoder encoder;
 
-    public ProfileServiceImpl(ProfileRepository profileRepository, ProfileMapper profileMapper, RoleRepository roleRepository) {
-    	this.profileRepository=profileRepository;
-    	this.profileMapper=profileMapper;
+    public ProfileServiceImpl(ProfileRepository profileRepository, ProfileMapper profileMapper,
+                              RoleRepository roleRepository, PasswordEncoder encoder) {
+        this.profileRepository = profileRepository;
+        this.profileMapper = profileMapper;
         this.roleRepository = roleRepository;
+        this.encoder = encoder;
     }
-    
+
     @Override
     @Transactional
     public ProfileDto createProfile(ProfileDto profileDto) throws RoleNotFoundException {
-    	// Check if user with email already exists, since email is unique
+
+        // Check if user with email already exists, since email is unique
+        //email is also username
+        profileDto.setUsername(profileDto.getEmail());
+
         if (profileRepository.findByEmail(profileDto.getEmail()).isPresent()) {
             throw new EmailInUseException();
         }
 
-        List<Role> role;
-        if (profileDto.getRoles() == null || profileDto.getRoles().isEmpty()) {
-            Role defaultRole = roleRepository.findByName("USER")
-                    .orElseThrow(() -> new RoleNotFoundException("Default role not found"));
-            role = List.of(defaultRole);
-        } else {
-            role = findRoleByIds(profileDto.getRoles());
-        }
+        profileDto.setPassword(encoder.encode(profileDto.getPassword()));
 
-        // Encrypt the password 
-        //String encodedPassword = passwordEncoder.encode(password);
-	
+        Set<String> strRoles = profileDto.getRoles();
+        Set<Role> roles = new HashSet<>();
+        createOrUpdateRolesForProfile(strRoles, roles);
+
         Profile profile = profileMapper.toEntity(profileDto);
-        profile.setRoles(role);
+        profile.setRoles(roles);
         Profile savedProfile = profileRepository.save(profile);
 
         return profileMapper.toDto(savedProfile);
+    }
+
+    private void createOrUpdateRolesForProfile(Set<String> strRoles, Set<Role> roles) throws RoleNotFoundException {
+        if (strRoles == null) {
+            Role userRole = roleRepository.findByName(RoleConstants.ROLE_USER)
+                    .orElseThrow(() -> new RoleNotFoundException("Default USER role not found"));
+            roles.add(userRole);
+        } else {
+            strRoles.forEach(role -> {
+                switch (role) {
+                    case RoleConstants.ROLE_ADMIN:
+                        Role adminRole = roleRepository.findByName(RoleConstants.ROLE_ADMIN)
+                                .orElseThrow(() -> new RuntimeException("Error: ADMIN Role is not found."));
+                        roles.add(adminRole);
+
+                        break;
+                    case RoleConstants.ROLE_ORGANISER:
+                        Role modRole = roleRepository.findByName(RoleConstants.ROLE_ORGANISER)
+                                .orElseThrow(() -> new RuntimeException("Error: ORGANISER Role is not found."));
+                        roles.add(modRole);
+
+                        break;
+                    default:
+                        Role userRole = roleRepository.findByName(RoleConstants.ROLE_USER)
+                                .orElseThrow(() -> new RuntimeException("Error: USER Role is not found."));
+                        roles.add(userRole);
+                }
+            });
+        }
     }
 
     @Override
@@ -73,32 +104,35 @@ public class ProfileServiceImpl implements ProfileService {
         if(profile.isPresent()) {
             return profileMapper.toDto(profile.get());
         }else{
-            throw new ProfileNotFoundException("Profile not found with id: " + profileId);
+            throw new ProfileNotFoundException(ErrorMessagesConstants.PROFILE_NOT_FOUND + profileId);
         }
     }
 
     @Override
     public ProfileDto updateProfile(Long id, ProfileDto profileDto) throws RoleNotFoundException {
         Profile existingProfile = profileRepository.findById(id)
-                .orElseThrow(() -> new ProfileNotFoundException("Profile is not found while updating: " + id));
+                .orElseThrow(() -> new ProfileNotFoundException(ErrorMessagesConstants.PROFILE_NOT_FOUND + id));
 
         // Update fields only if they are present in the DTO
-        if (profileDto.getName() != null && !Objects.equals(profileDto.getName(), existingProfile.getName())) {
+        if (StringUtils.hasText(profileDto.getName()) && !Objects.equals(profileDto.getName(), existingProfile.getName())) {
             existingProfile.setName(profileDto.getName());
         }
-        if (profileDto.getEmail() != null && !Objects.equals(profileDto.getEmail(), existingProfile.getEmail())) {
+        if (StringUtils.hasText(profileDto.getEmail()) && !Objects.equals(profileDto.getEmail(), existingProfile.getEmail())) {
             existingProfile.setEmail(profileDto.getEmail());
+            existingProfile.setUsername(profileDto.getEmail());
         }
-        if (profileDto.getConstituency() != null && !Objects.equals(profileDto.getConstituency(), existingProfile.getConstituency())) {
+        if (StringUtils.hasText(profileDto.getConstituency()) && !Objects.equals(profileDto.getConstituency(), existingProfile.getConstituency())) {
             existingProfile.setConstituency(profileDto.getConstituency());
         }
-        if (profileDto.getPassword() != null && !profileDto.getPassword().isEmpty() ) {
+        if (profileDto.getPassword() != null && !profileDto.getPassword().isEmpty()) {
             existingProfile.setPassword(profileDto.getPassword());
         }
 
         // Update roles if provided
-        if (profileDto.getRoles() != null && !profileDto.getRoles().isEmpty()) {
-            List<Role> roles = findRoleByIds(profileDto.getRoles());
+        if (profileDto.getRoles() != null && !profileDto.getRoles().isEmpty()) {// Update roles if provided
+            Set<String> strRoles = profileDto.getRoles();
+            Set<Role> roles = new HashSet<>();
+            createOrUpdateRolesForProfile(strRoles, roles);
             existingProfile.setRoles(roles);
         }
 
@@ -107,33 +141,14 @@ public class ProfileServiceImpl implements ProfileService {
 
         return profileMapper.toDto(updatedProfile);
     }
+
     @Override
     public void deleteProfile(Long profileId) {
 
         Profile profile = profileRepository.findById(profileId)
-                .orElseThrow(() -> new ProfileNotFoundException("Profile with ID " + profileId + " cannot be found"));
+                .orElseThrow(() -> new ProfileNotFoundException(ErrorMessagesConstants.PROFILE_NOT_FOUND + profileId));
 
-        profileRepository.deleteById(profile.getId());
-    }
-
-
-    @Override
-    public ProfileDto login(LoginRequestDTO loginRequestDTO) {
-    	// Check if user with email, check password
-    	
-    	Optional<Profile> profileOp = profileRepository.findByEmail(loginRequestDTO.getEmail());
-    	
-        if (profileOp.isPresent()) {
-            //check password
-        	if(!StringUtils.equals(profileOp.get().getPassword(), loginRequestDTO.getPassword())) {
-        		 throw new PasswordWrongException();
-        	}
-        }else {
-        	throw new UserNotExistedException();
-        } 
-        
-        return profileMapper.toDto(profileOp.get());
-
+        profileRepository.delete(profile); // Use delete() with the profile entity
     }
 
     @Override
@@ -141,43 +156,100 @@ public class ProfileServiceImpl implements ProfileService {
         List<Profile> profiles = profileRepository.findAll(); // Fetch all profiles from the repository
         return profiles.stream()
                 .map(profileMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    @Transactional
-    public ProfileDto assignRoleToUser(RoleAssignmentDto roleAssignmentDto) throws RoleNotFoundException, ProfileNotFoundException {
+    public ProfileDto assignRoleToUser(RoleAssignmentDto roleAssignmentDto)
+            throws RoleNotFoundException, ProfileNotFoundException {
+        // Retrieve the profile by userId, throw exception if not found
         Profile profile = profileRepository.findById(roleAssignmentDto.getUserId())
-                .orElseThrow(() -> new ProfileNotFoundException("Profile is not found when assigning role to user of ID: " + roleAssignmentDto.getUserId()));
+                .orElseThrow(() -> new ProfileNotFoundException(
+                        ErrorMessagesConstants.PROFILE_NOT_FOUND + roleAssignmentDto.getUserId()));
 
-        Role role = roleRepository.findById(roleAssignmentDto.getRoleId())
-                .orElseThrow(() -> new RoleNotFoundException("Role is not found when assigning role to user of ID: " + roleAssignmentDto.getRoleId()));
+        // Fetch roles by roleIds and throw exception if any role is not found
+        List<Role> newRoles = roleAssignmentDto.getRoleIds().stream()
+                .map(roleId -> roleRepository.findById(roleId)
+                        .orElseThrow(() -> new RoleNotFoundException(ErrorMessagesConstants.ROLE_NOT_FOUND + roleId)))
+                .toList();
 
-        // Check if the profile already has the role
-        if (profile.getRoles().contains(role)) {
-            throw new RoleAlreadyExistsException("User already has this role");
-        }
+        // Retrieve the existing roles from the profile
+        Set<Role> existingRoles = new HashSet<>(profile.getRoles());
 
-        // Add the new role to the profile
-        profile.getRoles().add(role);
+        // Determine which roles to add and which to remove
+        Set<Role> rolesToAdd = newRoles.stream()
+                .filter(role -> !existingRoles.contains(role))
+                .collect(Collectors.toSet());
+        Set<Role> rolesToRemove = existingRoles.stream()
+                .filter(role -> !newRoles.contains(role))
+                .collect(Collectors.toSet());
+
+        // Update the profile's roles
+        existingRoles.addAll(rolesToAdd);
+        existingRoles.removeAll(rolesToRemove);
+        profile.setRoles(existingRoles);
+
+        // Save the updated profile
         Profile updatedProfile = profileRepository.save(profile);
 
         return profileMapper.toDto(updatedProfile);
     }
 
+    @Override
+    @Transactional
+    public ProfileDto updateRoles(Long userId, List<Integer> roleIds)
+            throws RoleNotFoundException, ProfileNotFoundException {
+
+        Profile profile = profileRepository.findById(userId)
+                .orElseThrow(() -> new ProfileNotFoundException(ErrorMessagesConstants.PROFILE_NOT_FOUND + userId));
+
+        Set<Role> existingRoles = new HashSet<>(profile.getRoles()); // Ensure modifiable list
+        List<Role> newRoles = findRoleByIds(roleIds);
+
+        // Find roles to add
+        Set<Role> rolesToAdd = newRoles.stream()
+                .filter(role -> !existingRoles.contains(role))
+                .collect(Collectors.toSet());
+
+        // Find roles to remove
+        Set<Role> rolesToRemove = existingRoles.stream()
+                .filter(role -> !newRoles.contains(role))
+                .collect(Collectors.toSet());
+
+        // Update roles
+        existingRoles.addAll(rolesToAdd);
+        existingRoles.removeAll(rolesToRemove);
+
+        profile.setRoles(existingRoles); // Set the updated list of roles to the profile
+
+        Profile updatedProfile = profileRepository.save(profile);
+        return profileMapper.toDto(updatedProfile);
+    }
+
     private List<Role> findRoleByIds(List<Integer> roleIds) throws RoleNotFoundException {
         List<Role> roles = new ArrayList<>();
-
         for (Integer roleId : roleIds) {
-            Optional<Role> existingRole = roleRepository.findById(roleId);
-            if (existingRole.isPresent()) {
-                roles.add(existingRole.get());
-            } else {
-                throw new RoleNotFoundException("Role with ID " + roleId + " not found");
-            }
+            Role role = roleRepository.findById(roleId)
+                    .orElseThrow(() -> new RoleNotFoundException(ErrorMessagesConstants.ROLE_NOT_FOUND + roleId));
+            roles.add(role);
         }
-
         return roles;
+    }
+
+    @Override
+    public boolean isAdmin(Long profileId) {
+        Profile profile = profileRepository.findById(profileId)
+                .orElseThrow(() -> new ProfileNotFoundException(ErrorMessagesConstants.PROFILE_NOT_FOUND + profileId));
+
+        // Check if any of the user's roles has the ID 3 (admin role)
+        return profile.getRoles().stream()
+                .anyMatch(role -> role.getId() == 3);
+    }
+
+    @Override
+    public Profile findById(Long profileId) {
+        return profileRepository.findById(profileId)
+                .orElseThrow(() -> new ProfileNotFoundException(ErrorMessagesConstants.PROFILE_NOT_FOUND + profileId));
     }
 
 }
